# python-trees

./: .gitignore  README.rst  avl.py  construct.py  example.py  grapher.py  setup.cfg  test_avl.py  test_traversal.py  traversal.py  traversal_benchmarks.py
src/sherwood/: traversal.py  typing.py
src/sherwood/events/: __init__.py  animator.py  base.py
src/sherwood/renderers/: __init__.py  base.py  context.py  properties.py
src/sherwood/trees/: __init__.py  avl.py  base.py  redblack.py  utils.py
src/sherwood/utils/: draw.py
tests/: test_avl.py  test_redblack.py  test_traversal.py
tests/trees/avl/: test_avl.py
tests/trees/redblack/: helpers.py  test_construction.py  test_deletion.py  test_redblack.py  test_utils.py
