[metadata]
name = sherwood
version = attr: sherwood.__version__

[options]
packages = find:
package_dir =
    =src
install_requires =
    pydot==1.4.2

[options.extras_require]
dev =
    flake8
    flake8-black
    flake8-isort
    pytest
    pytest-coverage


[options.packages.find]
where = src

[flake8]
max-line-length = 88
ignore =
    E203  # disables "whitespace before ':'", as this is sometimes desired by PEP8 (and Black manages this)
    W503  # disables "line break before binary operator", preferred for this project

[isort]
atomic = true
profile = black
